--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,12 @@ ext {
 dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-batch'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hibernate:hibernate-entitymanager:4.3.10.Final'
+	runtimeOnly 'com.h2database:h2:2.1.214'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	runtimeOnly 'com.h2database:h2:2.1.214'
 //	implementation 'org.springframework.session:spring-session-core'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
